Fix: Resolve black screen image storage and JSON parsing issues
- Enhanced FaceRecognitionService image processing with multiple fallback methods
- Fixed image reading from MultipartFile streams with proper error handling
- Added white background when converting image types to prevent black images
- Implemented high-quality JPEG writing with maximum compression settings
- Fixed /detections/detect endpoint to return proper JSON instead of plain text
- Added debug component and test endpoint for troubleshooting image issues
- Updated Spring Security configuration for proper CORS and API access
- Changed frontend to run on port 4201 to resolve CORS conflicts

This milestone resolves the core image storage and API communication issues.